modified:   README.md 	modified:   index.html 	modified:   style.css

--- a/index.html
+++ b/index.html
@@ -11,20 +11,21 @@
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
     .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
+    .attribution a { text-decoration: none; color: hsl(30, 10%, 34%); }
   </style>
 </head>
 <body>
-  <header>
-    <div class="img-wrapper">
-      <img src="/assets/images/image-omelette.jpeg" alt="Omelette">
-    </div>
-    <h1>Simple Omelette Recipe</h1>
-    <p>
-      An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked to perfection, optionally filled with your choice of cheese, vegetables, or meats.
-    </p>
-  </header>
+
   <main>
+    <div class="header">
+      <div class="img-wrapper">
+        <img src="/assets/images/image-omelette.jpeg" alt="Omelette">
+      </div>
+      <h1>Simple Omelette Recipe</h1>
+      <p>
+        An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked to perfection, optionally filled with your choice of cheese, vegetables, or meats.
+      </p>
+    </div>
     <section class="section1">
       <h3>Preparation time</h3>
       <ul>
